Added animation, scrolling background, and jumping.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
             margin-right: auto;
             display: block;
             width: 640px;
+            image-rendering: optimizeSpeed;
+            image-rendering: -moz-crisp-edges;
+            image-rendering: -webkit-optimize-contrast;
+            image-rendering: -o-crisp-edges;
+            image-rendering: optimize-contrast;
         }
+
         body {
             margin: 0;
             background-color: #555;
