--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Ludum Dare 28</title>
     <style>
-        canvas, h1 {
+        canvas, h1, div {
             padding-left: 0;
             padding-right: 0;
             margin-left: auto;
@@ -15,6 +15,14 @@
             image-rendering: -webkit-optimize-contrast;
             image-rendering: -o-crisp-edges;
             image-rendering: optimize-contrast;
+        }
+
+        #instructions, #input, h1 {
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-bottom: 5px;
+            background-color: black;
+            color: white;
         }
 
         body {
@@ -29,5 +37,20 @@
 <script src="http://canvasquery.com/canvasquery.js"></script>
 <script src="http://canvasquery.com/canvasquery.framework.js"></script>
 <script type="text/javascript" src="js/game.js"></script>
+<div id="input">
+    <p>SFX Volume: <input id="sfx" type="range" value="0.3" min="0.0" max="1.0" step="0.05"/></p>
+
+    <p>Music Volume: <input id="music" type="range" value="0.3" min="0.0" max="1.0" step="0.05"/></p>
+</div>
+<div id="instructions" style="margin-bottom: 20px">
+    <p>
+
+    <h2>Controls:</h2> Space: Jump<br> W/S or UP/DOWN: Change lanes</p>
+    <h2>Plot:</h2> Your owner wanted to reward you with a pile of dog treats after you go on a walk with him,
+    but when he empties the box out into your bowl, only one comes out! It's time to get the treats you deserve!
+    Run to the pet store and fetch more dog treats!</p>
+    <h2>Source:</h2> Github: <a
+        href="https://github.com/garrickb/ludumdare28">https://github.com/garrickb/ludumdare28</a>
+</div>
 </body>
 </html>
